Group content into header, main, footer

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
 </head>
 <body>
-
+<header role="banner">
   <div class="masthead">
     <h1>
       <img src="images/logo.svg" alt="Arrrgene's treasure tours logo.">
       <span>Arrrgene’s Treasure Tours</span>
     </h1>
+    <nav role="navigation">
     <div class="nav" role="navigation">
       <ul>
         <li><a href="#">Tours</a></li>
@@ -21,8 +22,11 @@
         <li><a href="#">Tickets</a></li>
       </ul>
     </div>
+    </nav>
   </div>
+</header>
 
+<main>
   <div role="main">
 
     <div class="banner">
@@ -44,10 +48,12 @@
     </div>
 
   </div>
+</main>
 
+<footer>
   <div class="footer">
     <p>© Arrrgene’s Treasure Tours</p>
   </div>
-
+</footer>
 </body>
 </html>
