Add selection and article to the index.html file

--- a/index.html
+++ b/index.html
@@ -8,52 +8,54 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
 </head>
 <body>
-<header role="banner">
-  <div class="masthead">
-    <h1>
-      <img src="images/logo.svg" alt="Arrrgene's treasure tours logo.">
-      <span>Arrrgene’s Treasure Tours</span>
-    </h1>
-    <nav role="navigation">
-    <div class="nav" role="navigation">
-      <ul>
-        <li><a href="#">Tours</a></li>
-        <li><a href="#">Ships</a></li>
-        <li><a href="#">Tickets</a></li>
-      </ul>
+  <header role="banner">
+    <div class="masthead">
+      <h1>
+        <img src="images/logo.svg" alt="Arrrgene's treasure tours logo.">
+        <span>Arrrgene’s Treasure Tours</span>
+      </h1>
+      <nav role="navigation">
+        <div class="nav" role="navigation">
+          <ul>
+            <li><a href="#">Tours</a></li>
+            <li><a href="#">Ships</a></li>
+            <li><a href="#">Tickets</a></li>
+          </ul>
+        </div>
+      </nav>
     </div>
-    </nav>
-  </div>
-</header>
+  </header>
 
-<main>
-  <div role="main">
+  <main>
+    <div role="main">
+      <section>
+        <div class="banner">
+          <img src="images/banner.jpg" alt="Background image of an aged trearsue map.">
+          <div>
+            <h2>Ahoy, me Hearties!</h2>
+            <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
+            <a href="#">Book a tour</a>
+          </div>
+        </div>
+      </section>
 
-    <div class="banner">
-      <img src="images/banner.jpg" alt="Background image of an aged trearsue map.">
-      <div>
-        <h2>Ahoy, me Hearties!</h2>
-        <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
-        <a href="#">Book a tour</a>
-      </div>
+      <article>
+        <div class="ship">
+          <div class="card">
+            <img src="images/ship.svg" alt="Graphic of a pirate ship">
+            <h2>Heave Ho!</h2>
+            <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
+            <a href="#">See the specs</a>
+          </div>
+        </div>
+      </article>
     </div>
+  </main>
 
-    <div class="ship">
-      <div class="card">
-        <img src="images/ship.svg" alt="Graphic of a pirate ship">
-        <h2>Heave Ho!</h2>
-        <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
-        <a href="#">See the specs</a>
-      </div>
+  <footer>
+    <div class="footer">
+      <p>© Arrrgene’s Treasure Tours</p>
     </div>
-
-  </div>
-</main>
-
-<footer>
-  <div class="footer">
-    <p>© Arrrgene’s Treasure Tours</p>
-  </div>
-</footer>
+  </footer>
 </body>
 </html>
