--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span>Arrrgene’s Treasure Tours</span>
       </h1>
       <nav role="navigation">
-        <div class="nav" role="navigation">
+        <div class="nav">
           <ul>
             <li><a href="#">Tours</a></li>
             <li><a href="#">Ships</a></li>
@@ -53,7 +53,7 @@
   </main>
 
   <footer>
-    <div class="footer">
+    <div class="footer" role="contentinfo">
       <p>© Arrrgene’s Treasure Tours</p>
     </div>
   </footer>
